# andamios-orm

./: .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: .gitkeep
andamios_orm/: __init__.py
andamios_orm/migration/: __init__.py
andamios_orm/models/: base.py
andamios_orm/repositories/: base.py
andamios_orm/scripts/: __init__.py
claude-structure/: CLAUDE.md
claude-structure/docs/: TEST_CONFIGURATION.md
claude-structure/examples/advanced/: relationships.py
claude-structure/examples/basic/: user_crud.py
claude-structure/examples/integration/: fastapi_integration.py
docs/: ARCHITECTURE.md  README.md  TEST_CONFIGURATION.md  github-issues.md
examples/: README.md  run_examples.py
examples/advanced/: README.md
examples/basic/: README.md  all_models_crud.py  conversation_crud.py  create_conversation.py  create_document.py  create_project.py  create_repository.py  delete_conversation.py  delete_document.py  delete_project.py  delete_repository.py  document_crud.py  document_simple_final.py  minimal_example.py  project_crud.py  project_simple_final.py  read_conversation.py  read_document.py  read_project.py  read_repository.py  repository_crud.py  repository_simple.py  simple_create.py  simple_models.py  simple_read.py  ultra_simple_crud.py  update_conversation.py  update_document.py  update_project.py  update_repository.py
legacy/: .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES_STRUCTURE.md  GITHUB_ISSUES.md  README.md  TEST_CONFIGURATION.md  create_github_issues.sh  docker-compose.yml  pyproject.toml
legacy/.github/ISSUE_TEMPLATE/: example-task.md  implementation-task.md  test-task.md
legacy/.github/workflows/: ci.yml
legacy/database/: database.py
legacy/docker/development/: Dockerfile
legacy/docs/: README.md
legacy/docs/guides/: getting-started.md
legacy/examples/: README.md
legacy/examples/basic/: 01_connection.py  01_simple_crud.py  02_conversation_crud.py  02_models.py  03_document_crud.py  04_repository_crud.py
legacy/scripts/: dev-setup.sh
legacy/tests/: conftest.py  factories.py
legacy/tests/examples/: test_basic_examples.py
src/andamios_orm/: __init__.py  simple.py
src/andamios_orm/core/: __init__.py  engine.py  session.py
src/andamios_orm/models/: __init__.py  base.py
src/andamios_orm/repositories/: __init__.py
src/andamios_orm/scripts/: cli.py
tests/: __init__.py
tests/integration/: __init__.py  test_placeholder.py
tests/unit/: __init__.py  test_placeholder.py
