[tool.poetry]
name = "andamios-orm"
version = "0.1.0"
description = "A Python ORM library for database interactions"
authors = ["andresclaroavocado <andres.claro@avocadoblock.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andresclaroavocado/andamios-orm"
repository = "https://github.com/andresclaroavocado/andamios-orm"
keywords = ["orm", "database", "sqlalchemy", "python", "andamios"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "andamios_orm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.35"
alembic = "^1.13.0"
pydantic = "^2.10.0"
typing-extensions = "^4.12.0"
duckdb = "^1.1.0"
duckdb-engine = "^0.13.0"
uvloop = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.0"
black = "^24.10.0"
isort = "^5.13.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.0"
pytest-mock = "^3.12.0"
factory-boy = "^3.3.0"
faker = "^30.0.0"

# No extras needed - DuckDB is the primary and only database target

[tool.poetry.scripts]
andamios-orm = "andamios_orm.scripts.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["andamios_orm"]
src_paths = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=andamios_orm",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["src/andamios_orm"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]