[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "andamios-orm"
version = "0.1.0"
description = "A modern, async-first Python ORM library built on DuckDB and SQLAlchemy 2.0+"
authors = ["Andamios Team <team@andamios.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andamios/andamios-orm"
repository = "https://github.com/andamios/andamios-orm"
documentation = "https://docs.andamios.dev/orm"
keywords = ["orm", "async", "duckdb", "sqlalchemy", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
packages = [{include = "andamios_orm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
# Core dependencies - Latest stable versions with explicit library specifications
sqlalchemy = "^2.0.35"  # SQLAlchemy 2.0+ for modern async ORM foundation
duckdb = "^1.1.0"       # DuckDB 1.1+ for high-performance columnar database
uvloop = {version = "^0.20.0", markers = "sys_platform != 'win32'"}  # uvloop for async performance
pydantic = "^2.10.0"    # Pydantic 2.10+ for data validation and serialization
alembic = "^1.13.0"     # Alembic 1.13+ for database migration management
# Async support
asyncio-mqtt = {version = "^0.13.0", optional = true}
# CLI support
click = "^8.1.0"        # Click 8.1+ for command-line interface
rich = "^13.9.0"        # Rich 13.9+ for beautiful terminal output

[tool.poetry.group.dev.dependencies]
# Testing frameworks with explicit specifications
pytest = "^8.3.0"           # Pytest 8.3+ for modern testing framework
pytest-asyncio = "^0.24.0"  # pytest-asyncio 0.24+ for async test support
pytest-xdist = "^3.6.0"     # pytest-xdist 3.6+ for parallel test execution
pytest-cov = "^6.0.0"       # pytest-cov 6.0+ for coverage reporting
pytest-mock = "^3.14.0"     # pytest-mock 3.14+ for mocking utilities
factory-boy = "^3.3.0"      # Factory Boy 3.3+ for test data generation
# Code quality tools with explicit specifications
mypy = "^1.13.0"            # MyPy 1.13+ for static type checking
ruff = "^0.8.0"             # Ruff 0.8+ for fast linting and formatting
black = "^24.10.0"          # Black 24.10+ for code formatting
isort = "^5.13.0"           # isort 5.13+ for import sorting
pre-commit = "^4.0.0"       # pre-commit 4.0+ for git hooks
# Security tools with explicit specifications
bandit = "^1.8.0"           # Bandit 1.8+ for security linting
safety = "^3.2.0"           # Safety 3.2+ for vulnerability scanning
# Documentation tools with explicit specifications
sphinx = "^8.1.0"           # Sphinx 8.1+ for documentation generation
sphinx-rtd-theme = "^3.0.0" # Sphinx RTD theme 3.0+ for documentation styling
myst-parser = "^4.0.0"      # MyST Parser 4.0+ for Markdown support in Sphinx
# Development tools with explicit specifications
ipython = {version = "^8.30.0", python = ">=3.13"} # IPython 8.30+ for interactive development
ipdb = "^0.13.13"           # IPDB 0.13+ for debugging

[tool.poetry.group.performance.dependencies]
# Performance testing and profiling tools with explicit specifications
pytest-benchmark = "^4.0.0"    # pytest-benchmark 4.0+ for performance benchmarking
memory-profiler = "^0.61.0"     # Memory Profiler 0.61+ for memory usage analysis
py-spy = "^0.3.14"              # py-spy 0.3+ for Python application profiling

[tool.poetry.scripts]
andamios-orm = "andamios_orm.cli:main"

[tool.poetry.extras]
mqtt = ["asyncio-mqtt"]
all = ["asyncio-mqtt"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["andamios_orm"]
known_third_party = ["sqlalchemy", "duckdb", "pydantic", "uvloop", "alembic"]

# Ruff configuration
[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "C901", # too-complex
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q", # flake8-quotes
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (we'll handle this case by case)
    "B904",  # Allow raising exceptions without from cause
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*" = ["B011", "S101", "ARG001"]  # Allow assert statements in tests

[tool.ruff.mccabe]
max-complexity = 10

# MyPy configuration
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "factory_boy.*",
    "uvloop.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/andamios_orm",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=100",
    "-ra",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (isolated component testing)",
    "integration: Integration tests (with real database)",
    "e2e: End-to-end tests (complete workflows)",
    "performance: Performance tests (benchmarking)",
    "slow: Slow running tests",
]
asyncio_mode = "auto"
# Parallel execution
# addopts = ["-n", "auto"]  # Uncomment to enable parallel testing by default

# Coverage configuration
[tool.coverage.run]
source = ["src/andamios_orm"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/site-packages/*",
]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test

# Pre-commit configuration file reference
# (actual configuration in .pre-commit-config.yaml)
[tool.pre-commit]
# This section is for reference only
# Actual configuration is in .pre-commit-config.yaml